--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+  * Run timed backups with lower thread priority on Windows.
   * Fix status monitor segfault.
 
 2013-04-02 Changes in burp-1.3.30:
