--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
-  * Run timed backups with lower thread priority on Windows.
   * Fix status monitor segfault.
+  * Run timed backups with lower thread priority on Windows.
+  * Add 'vss_drives' option, which gives the ability to specify which Windows
+    drives get a VSS snapshot.
 
 2013-04-02 Changes in burp-1.3.30:
   * Add a warning when run on Windows without admin privileges.
