--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -557,6 +557,9 @@ When backing up Windows computers, this option allows you to save the VSS header
 .TP
 \fBstrip_vss=[0|1]\fR
 When backing up Windows computers, this option allows you to prevent the VSS header data being backed up. The default is off. To restore a backup that has no VSS information on Windows, you need to give the client the '\-x' command line option.
+.TP
+\fBvss_drives=[list of drive letters]\fR
+When backing up Windows computers, this option allows you to specify which drives have VSS snapshots taken of them. If you omit this option, burp will automatically decide based on the 'include' options. If you want no drives to have snapshots taken of them, you can specify '0'.
 
 .SH SERVER CLIENTCONFDIR FILE
 .TP
