--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2013-05-31 Changes in burp-1.3.32:
   * Fix status monitor segfault.
   * Run timed backups with lower thread priority on Windows.
   * Add 'vss_drives' option, which gives the ability to specify which Windows
