--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+  * Contributions from Avi Rozen:
+	+ Major autoconf cleanup.
+	+ Initial support for cross-building android targets.
+
 2013-05-31 Changes in burp-1.3.32:
   * Fix status monitor segfault.
   * Run timed backups with lower thread priority on Windows.
