--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,9 @@
-  * On the server, indicate where logging is occurring.
-  * Fix bedup segfault when using -m with no argument.
+2013-06-29 Changes in burp-1.3.34:
   * Contributions from Avi Rozen:
 	+ Major autoconf cleanup.
 	+ Initial support for cross-building android targets.
+  * On the server, indicate where logging is occurring.
+  * Fix bedup segfault when using -m with no argument.
 
 2013-05-31 Changes in burp-1.3.32:
   * Fix status monitor segfault.
