--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Fix truncation of timestamps in the live status monitor.
+
 2013-06-29 Changes in burp-1.3.34:
   * Contributions from Avi Rozen:
 	+ Major autoconf cleanup.
