--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -21,7 +21,7 @@ is /etc/burp/burp.conf.
 .TP
 \fB\-n\fR \fB\fR
 No forking mode. The program will accept a single query, deal with it, and then
-exit. This is useful for debugging. Implies '\-F'.
+exit. This is useful for debugging. Implies '\-F'. If you intend to debug a burp2 session, you will also want to run a separate champion chooser process ('\-a c' below).
 .TP
 \fB\-F\fR \fB\fR
 Foreground mode. The server will fork into the background and run as a daemon if you do not give this option.
@@ -32,11 +32,19 @@ Generate initial CA keys and certificates, and then exit.
 \fB\-i\fR \fB\fR
 Print an index table of symbols that humans may see burp produce, and exit.
 .TP
+\fB\-a c\fR \fB\fR
+Run as a stand-alone champion chooser process (useful for debugging burp2 style backups).
+.TP
 \fB\-a s\fR \fB\fR
 Run this to connect to a running server to get a live monitor of the status of all your backup clients. If your server config file is not in the default location, you will also need to specify the path with the '\-c' option. The live monitor requires ncurses support at compile time.
 .TP
 \fB\-a S\fR \fB\fR
 Similar to '\-a s', but it prints the main status monitor summary screen to stdout. The intention is that a script can run this and email an administrator the output on a cron job. This doesn't require ncurses support. There are additional options that can be given with '\-a S', listed below. These enable logs and contents of backups to be listed whilst logged in on the server machine.
+.TP
+ADDITIONAL SERVER OPTIONS TO USE WITH '\-a c'
+.TP
+\fB\-C\fR \fB[client]\fR
+Run as if forked via a connection from this client.
 .TP
 ADDITIONAL SERVER OPTIONS TO USE WITH '\-a S'
 .TP
