--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
   * Compile for systems that have no O_NOATIME and fdopendir() - ie, Mac OS X.
   * Bug fix - some readlink() returns were getting assigned to an unsigned
     variable, not a signed variable.
+  * Removed references to old '-l' logfile option.
 
 2014-04-29 Changes in burp-1.4.14:
   * Add an 'atime' option, which allows the user to choose whether to use
