--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,8 @@
   * Removed references to old '-l' logfile option.
   * Added Jarkko Kniivilä's FreeBSD init script.
   * Added Jarkko Kniivilä's tweaks to make scripts run more easily on FreeBSD.
+  * In bedup, detect if a rename failed after unlinking the target file,
+    print a warning and stop processing.
 
 2014-04-29 Changes in burp-1.4.14:
   * Add an 'atime' option, which allows the user to choose whether to use
